# clara-viz

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.claravizrenderserver  Dockerfile_aarch64.build  Dockerfile_x86_64.build  LICENSE  LICENSE-3rdparty.md  README.md  build.sh  run_docker.sh
cmake/: Project.cmake  Tools.cmake  (+2 more)
src/: CMakeLists.txt
src/claraviz/: CMakeLists.txt
src/claraviz/core/: Image.cpp  Image.h  RenderServerBase.cpp  RenderServerBase.h  Video.cpp  Video.h
src/claraviz/hardware/cuda/: Convert.cu  Convert.h  CudaService.h
src/claraviz/hardware/nvenc/: NvEncService.cpp  NvEncService.h
src/claraviz/hardware/nvjpeg/: NvJpegService.cpp  NvJpegService.h
src/claraviz/image/: JpegEncoder.cpp  JpegEncoder.h
src/claraviz/interface/: CameraApertureInterface.cpp  CameraApertureInterface.h  CameraInterface.cpp  CameraInterface.h  DataInterface.cpp  DataInterface.h  DataViewInterface.cpp  DataViewInterface.h  ImageInterface.cpp  ImageInterface.h  InterfaceData.h  JsonInterface.cpp  JsonInterface.h  LightInterface.cpp  LightInterface.h  PostProcessDenoiseInterface.cpp  PostProcessDenoiseInterface.h  PostProcessTonemapInterface.cpp  PostProcessTonemapInterface.h  RenderSettingsInterface.cpp  RenderSettingsInterface.h  TransferFunctionInterface.cpp  TransferFunctionInterface.h  VideoInterface.cpp  VideoInterface.h  ViewInterface.cpp  ViewInterface.h
src/claraviz/rpc/: BackgroundLightRPC.cpp  BackgroundLightRPC.h  CameraApertureRPC.cpp  CameraApertureRPC.h  CameraRPC.cpp  CameraRPC.h  DataCropRPC.cpp  DataCropRPC.h  DataRPC.cpp  DataRPC.h  DataTransformRPC.cpp  DataTransformRPC.h  DataViewRPC.cpp  DataViewRPC.h  ImageRPC.cpp  ImageRPC.h  LightRPC.cpp  LightRPC.h  PostProcessDenoiseRPC.cpp  PostProcessDenoiseRPC.h  PostProcessTonemapRPC.cpp  PostProcessTonemapRPC.h  QueryLimitsRPC.cpp  QueryLimitsRPC.h  RenderSettingsRPC.cpp  RenderSettingsRPC.h  ResetRPC.cpp  ResetRPC.h  ServerRPC.cpp  ServerRPC.h  TransferFunctionRPC.cpp  TransferFunctionRPC.h  TypesRPC.h  VideoRPC.cpp  VideoRPC.h  ViewRPC.cpp  ViewRPC.h
src/claraviz/util/: Blob.cpp  Blob.h  CudaMemoryBlob.h  Exception.h  Log.cpp  Log.h  MHDLoader.cpp  MHDLoader.h  MatrixT.h  Message.cpp  Message.h  Observed.cpp  Observed.h  SharedMemoryBlob.cpp  SharedMemoryBlob.h  Singleton.h  StdContainerBlob.h  Synchronized.h  Thread.cpp  Thread.h  Types.h  UUID.cpp  UUID.h  UniqueObj.h  Validator.h  Value.h  VectorOp.h  VectorT.h
src/claraviz/video/: Mp4Wrapper.cpp  Mp4Wrapper.h  NvEncVideoEncoder.cpp  NvEncVideoEncoder.h  OpenH264VideoEncoder.cpp  OpenH264VideoEncoder.h  VideoEncoder.cpp  VideoEncoder.h
src/examples/: CMakeLists.txt
src/examples/claravizrenderer-ui/: CMakeLists.txt  Main.cpp  README.md  UI.cpp  UI.h
src/examples/renderer/: CMakeLists.txt  Dockerfile.renderer  ExampleRenderServer.cpp  ExampleRenderServer.h  Main.cpp  README.md  docker-compose.yml  example_render_server.proto  gen_volume.py
src/examples/renderer/cuda/: MinMax.cuh  RenderSlice.cuh  RenderVolume.cuh  Renderer.cu  Renderer.h  Session.h
src/examples/renderer/interface/: SliceInterface.cpp  SliceInterface.h
src/examples/renderer/rpc/: SliceRPC.cpp  SliceRPC.h
src/examples/renderer/ui/: Dockerfile.client  Dockerfile.envoy  client.js  index.html  package.json  webpack.config.js
src/examples/volumestreamrenderer/: .dockerignore  CMakeLists.txt  DataSource.h  DataSourceCT.cpp  DataSourceCT.h  DataSourceUS.cpp  DataSourceUS.h  Dockerfile.renderer  Main.cpp  README.md  VolumeStreamRenderServer.cpp  VolumeStreamRenderServer.h  docker-compose.yml  volume_stream_render_server.proto
src/examples/volumestreamrenderer/cuda/: BackProjectionConstruction.cu  BackProjectionConstruction.h
src/examples/volumestreamrenderer/ui/: Dockerfile.client  Dockerfile.envoy  envoy.yaml  package.json
src/examples/volumestreamrenderer/ui/nginx/: nginx.conf
src/examples/volumestreamrenderer/ui/public/: index.html
src/examples/volumestreamrenderer/ui/src/: App.css  App.js  App.test.js  index.css  index.js
src/examples/volumestreamrenderer/ui/src/components/mouseInteraction/: MouseInteraction.js
src/examples/volumestreamrenderer/ui/src/components/videostream/: VideoStream.js
src/examples/volumestreamrenderer/ui/src/components/videostream/source/: Stream.js
src/examples/web-client/: CMakeLists.txt  Dockerfile.client  Dockerfile.envoy  README.md  Stream.js  client.js  docker-compose.yml  envoy.yaml  index.html  package.json  webpack.config.js
src/nvrpc/: CMakeLists.txt  Context.h  Executor.cc  Executor.h  Interfaces.h  LifeCycleServerStreaming.h  LifeCycleUnary.h  RPC.h  Resources.h  Server.cc  Server.h  Service.h  ThreadPool.cc  ThreadPool.h
src/protos/: CMakeLists.txt
src/protos/nvidia/claraviz/cinematic/v1/: render_server.proto
src/protos/nvidia/claraviz/core/: camera.proto  types.proto
src/protos/nvidia/claraviz/fetch/v1/: fetch.proto
src/protos/nvidia/claraviz/image/v1/: image.proto
src/protos/nvidia/claraviz/video/v1/: video.proto
src/python/: CMakeLists.txt  README.md
src/python/clara-viz/: MANIFEST.in  setup.py
src/python/clara-viz-core/: MANIFEST.in  setup.cfg  setup.py
src/python/clara-viz-core/clara/viz/core/: __init__.py  _version.py  datadefinition.py  importutil.py
src/python/clara-viz-widgets/: MANIFEST.in  RELEASE.md  clara-viz-widgets.json  install.json  setup.py
src/python/clara-viz-widgets/clara/viz/widgets/: __init__.py  _version.py  widget.py
src/python/clara-viz-widgets/js/: README.md  package.json  webpack.config.js
src/python/clara-viz-widgets/js/lib/: embed.js  extension.js  index.js  labplugin.js  widget.js
src/python/clara-viz/clara/viz/: __init__.py  _version.py
src/python/notebooks/: Multi_resolution_image.ipynb  Render_image.ipynb  Slice_rendering.ipynb
src/python/notebooks/data/bonsai/: settings.json
src/python/notebooks/data/syn3193805/: settings.json
src/python/pybind11/: CMakeLists.txt  ImageCapsule.h  PythonRenderer.cpp  PythonRenderer.h  VideoStream.cpp  VideoStream.h  clara-viz_py.cpp  export.map
(+21 files in other folders)
